# cubix_data_engineer_capstone

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
final_output/: part-00000-tid-8128531980581187775-edc990d5-9d58-4da2-8839-63660258ca44-123-1-c000.snappy.parquet  part-00001-tid-8128531980581187775-edc990d5-9d58-4da2-8839-63660258ca44-124-1-c000.snappy.parquet  part-00002-tid-8128531980581187775-edc990d5-9d58-4da2-8839-63660258ca44-125-1-c000.snappy.parquet
src/: test.py
src/cubix_data_engineer_capstone/etl/bronze/: extract_and_load_file.py
src/cubix_data_engineer_capstone/etl/gold/: daily_product_category_metrics.py  daily_sales_metrics.py  wide_sales.py
src/cubix_data_engineer_capstone/etl/silver/: calendar.py  customers.py  product_category.py  product_subcategory.py  products.py  products_subcategory.py  sales.py  scd.py
src/cubix_data_engineer_capstone/utils/: authentication.py  config.py  datalake.py
tests/: conftest.py
tests/etl/gold/: test_daily_product_category_metrics.py  test_daily_sales_metrics.py  test_wide_sales.py
tests/etl/silver/: test_calendar.py  test_customers.py  test_product_category.py  test_product_subcategory.py  test_products.py  test_products_subcategory.py  test_sales.py
