[project]
name = "cubix-data-engineer-capstone"
version = "0.2.1"
description = ""
authors = [
    {name = "Beata Paulanyi",email = "paulanyi@aol.com"}
]
readme = "README.md"
requires-python = ">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
pyspark = "^3.5.4"
numpy= "^1"

[tool.poetry]
packages = [{include = "cubix_data_engineer_capstone", from = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5 "
pyarrow= "^19.0.1 "
pre-commit = "^4.2.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
textpaths = ["./tests"]
filterwarnings = ["ignore:DeprecationWarning"]
addopts = " --disable-warnings -p no:warnings"
